syntax = "proto3";

option java_multiple_files = true;
option java_package = "co.overlead.gRPC";
option java_outer_classname = "myproject";
option objc_class_prefix = "mp";
package myproject;

service Myproject{
    rpc addNewProject(AddNewProjectReq) returns (AddNewProjectRes) {}
    rpc updateProject(UpdateProjectReq) returns (UpdateProjectRes){}
    rpc deleteProject(DeleteProjectReq) returns (DeleteProjectRes){}
}

message AddNewProjectReq{
    string username = 1;
	string projectName = 2;
	string start = 3;		// form mm/hh/dd/mm/yyyy       phut/gio/ngay/thang/nam
	string end = 4;		   // form mm/hh/dd/mm/yyyy 
	string private = 5;
}

message AddNewProjectRes{
    string status = 1;
	string projectId = 2;
	string error = 3;
}

message UpdateProjectReq{
	string projectId = 1;
    string username = 2;
	string projectName = 3;
	string start = 4;		 // form mm/hh/dd/mm/yyyy       phut/gio/ngay/thang/nam
	string end = 5;			// form mm/hh/dd/mm/yyyy 
	string private = 6;
}
message UpdateProjectRes{
    string status = 1;
	string error = 2;
}
message DeleteProjectReq{
    string username = 1;
    string projectId = 2;
}
message DeleteProjectRes{
    string status = 1;
	string error = 2;
}
