syntax = "proto3";

option java_multiple_files = true;
option java_package = "co.overlead.gRPC";
option java_outer_classname = "mytask";
option objc_class_prefix = "mt";
package mytask;

service Mytask{
	rpc getAllMyTask(GetAllMyTaskReq) returns (stream GetAllMyTaskRes){}
	rpc commentMyTask(CommentMyTaskReq) returns (MyTaskRes){}
	rpc updateMyTask(UpdateMyTaskReq) returns (MyTaskRes){}
}
message MyTaskReq{
	string requesterId = 1;
	string projectId = 2;
	string teamId=4;
	string accessToken = 3;
	string taskId=5;
}
message CommentMyTaskReq{
	MyTaskReq mytask=1;
	string comment=2;
}
message UpdateMyTaskReq{
	string requesterId = 1;
	string projectId = 2;
	string teamId=4;
	string accessToken = 3;


	string statusTask=5;
}
message MyTaskRes{
	string status=1;
}
message GetAllMyTaskReq{
    string requesterId = 1;
	string projectId = 2;
	string teamId=4;
	string accessToken = 3;
}
message GetAllMyTaskRes{
	string title = 1;		
	string description = 2;		   
	string priority = 3;
	string start = 4;		 		 // form mm/hh/dd/mm/yyyy       phut/gio/ngay/thang/nam
	string deadline = 5;			// form mm/hh/dd/mm/yyyy
	string comment = 6;
	string status = 7;
	string error=8;
}